--- a/samples/EMDecouplingSample/pom.xml
+++ b/samples/EMDecouplingSample/pom.xml
@@ -51,11 +51,6 @@
       <version>3.2.5.ga</version>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>ejb3-persistence</artifactId>
-      <version>1.0.1.GA</version>
-    </dependency>
-    <dependency>
       <groupId>javax.sql</groupId>
       <artifactId>jdbc-stdext</artifactId>
       <version>2.0</version>
@@ -86,6 +81,11 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>4.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.owasp.antisamy</groupId>
+      <artifactId>antisamy</artifactId>
+      <version>1.4.5</version>
     </dependency>
   </dependencies>
 </project>
