--- a/samples/EMDecouplingSample/pom.xml
+++ b/samples/EMDecouplingSample/pom.xml
@@ -87,5 +87,10 @@
       <artifactId>hibernate-core</artifactId>
       <version>4.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.charts4j</groupId>
+      <artifactId>charts4j</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 </project>
