--- a/samples/EMDecouplingSample/pom.xml
+++ b/samples/EMDecouplingSample/pom.xml
@@ -83,21 +83,14 @@
       <version>4.1.2</version>
     </dependency>
     <dependency>
-<<<<<<< HEAD
-<<<<<<< HEAD
       <groupId>com.googlecode.charts4j</groupId>
       <artifactId>charts4j</artifactId>
       <version>1.3</version>
-=======
+  </dependency>
+  <dependency>
       <groupId>org.owasp.antisamy</groupId>
       <artifactId>antisamy</artifactId>
       <version>1.4.5</version>
->>>>>>> branch 'master' of https://github.com/jdbermeol/FTSI2.git
-=======
-      <groupId>org.owasp.antisamy</groupId>
-      <artifactId>antisamy</artifactId>
-      <version>1.4.5</version>
->>>>>>> 1a7f39fdd56b6206c89b300f554f9c365003eb8a
     </dependency>
   </dependencies>
 </project>
